Removed 'find duplicates' functionality from app and fixed 'csv export' button so it works with searches.

--- a/accession/templates/admin/accession/change_list.html
+++ b/accession/templates/admin/accession/change_list.html
@@ -2,5 +2,5 @@
 {% load i18n %}
 
 {% block pagination %}{{ block.super }}
-<a href="{{ model.admin.url }}export_csv/{% if request.META.QUERY_STRING %}?{{ request.META.QUERY_STRING }}{% endif %}" class="addlink">Export to CSV</a> | <a href="{{ model.admin_url }}duplicates/"> List Duplicate Values</a>
+<a href="{{ model.admin.url }}export_csv/{% if request.META.QUERY_STRING %}?{{ request.META.QUERY_STRING }}{% endif %}" class="addlink">Export to CSV</a>
 {% endblock %}
