Make app compatible with Django 1.8 - 1.11 and remove Django 1.7 compatibility.

--- a/accession/templates/admin/accession/change_form.html
+++ b/accession/templates/admin/accession/change_form.html
@@ -1,11 +1,12 @@
 {% extends "admin/change_form.html" %}
 {% load i18n %}
+{% load admin_urls %}
 
 {% block object-tools %}
 {% if change %}{% if not is_popup %}
   <ul class="object-tools">
-  <li><a href="print/" class="historylink">{% trans "Print View" %}</a></li>
-  <li><a href="history/" class="historylink">{% trans "History" %}</a></li>
+  <li><a href="{% url 'tfc_model_print' opts.app_label opts.model_name object_id %}" class="historylink">{% trans "Print View" %}</a></li>
+  <li><a href="{% url opts|admin_urlname:'history' object_id %}" class="historylink">{% trans "History" %}</a></li>
   {% if has_absolute_url %}<li><a href="../../../r/{{ content_type_id }}/{{ object_id }}/" class="viewsitelink">{% trans "View on site" %}</a></li>{% endif%}
   </ul>
 {% endif %}{% endif %}
